Mon Oct 27 15:51:39 2003  Steve Huston  <shuston@riverace.com>

	* configure.ac:
	* m4/acinclude.m4: Remove \ from \-quoted double- and back-quote
	  characters to obey warnings from autoheader 2.57g. autoheader's
	  processing of these warnings was erroneous, causing it to fail.

Mon Oct 27 19:48:13 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/modules/GNUACEWorkspaceCreator.pm:
          For reverseclean don't use the reverse_clean perl script but do
          a realclean in reverse order. This fixes the problem we have in the
          Sun Forte build where the list of arguments to the perl script is
          to long.

Mon Oct 27 11:17:03 2003  Gautam Thaker  <gthaker@atl.lmco.com>

        * SOCK_SEQPACK_clt.cpp:
          Fixed a previously made change that was using sizes for tests as
          n**2 rather than 2**n!
          SOCK_STREAM_clt.cpp:
          Fixed a previously made change that was using sizes for tests as
          n**2 rather than 2**n!

Sat Oct 25 10:51:23 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-common.h: Fixed compile problem in this file

Fri Oct 17 18:40:55 2003  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/Log_Msg.cpp: Modify the ACE_Log_Msg::dec() method to avoid
	  "going negative."  Thanks to Matthieu Vansteene
 	  <matthieu.vansteene@regis-dgac.net> for reporting this.

Thu Oct 23 17:14:47 2003  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/config-win32-common.h: Fixed a problem whereby ACE_IOV_MAX
	  should have been 16 for Win 95/98/me.  Thanks to Enrico Detoma
 	  <enrico.detoma@email.it> for reporting this.

Fri Oct 24 11:27:52 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

        * ACE version 5.3.5 released.

Fri Oct 24 10:48:41 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* ACE-INSTALL.html: Changed documentation to reflect the fact that
	  $ACE_ROOT/lib also has to added LD_LIBRARY_PATH since some of